--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/MuhamadNurRizkii/belajar-nodejs-npm"
   },
   "license": "ISC",
   "author": "Muhamad Nur Rizki",
